# fui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: README.md  app_basic.rs  app_basic_looped.rs  app_ln_like.rs  app_tar_like.rs  clap-basic.rs  clap-flags.rs  clap-globals.rs  clap-options.rs  clap-positional.rs  clap-subcommands.rs  clap.rs  feeders.rs  field_autocomplete.rs  field_checkbox.rs  field_multiselect.rs  field_text.rs  form.rs  view_autocomplete.rs  view_multiselect.rs
examples/shell_completions/: Cargo.toml  build.rs
examples/shell_completions/src/: app.rs  main.rs
src/: clap_conv.rs  feeders.rs  form.rs  lib.rs  utils.rs  validators.rs
src/fields/: autocomplete.rs  checkbox.rs  mod.rs  multiselect.rs  text.rs
src/views/: autocomplete.rs  mod.rs  multiselect.rs
