[package]
name = "fui"
version = "0.8.0"
description = "Add CLI & form interface to your program."
keywords = ["TUI", "forms", "CLI", "ncurses", "termion"]
documentation = "https://docs.rs/fui"
authors = ["xliiv <tymoteusz.jankowski@gmail.com>"]
exclude = ["examples/**", "docs/**"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xliiv/fui"

[dependencies]
clap = "2"
# linux requires `sudo apt-get install xorg-dev`
clipboard = "0.4"
glob = "0.2"
regex = "0.2"
serde_json = "1.0"

[dependencies.cursive]
#TODO:: requires new version
git = "https://github.com/gyscos/Cursive"
#version = "0.9"
default-features = false

[features]
default = ["ncurses-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
