[package]
name = "fui"
version = "0.9.0"
description = "Add CLI & form interface to your program."
keywords = ["TUI", "forms", "CLI", "ncurses", "termion"]
documentation = "https://docs.rs/fui"
authors = ["xliiv <tymoteusz.jankowski@gmail.com>"]
exclude = ["examples/**", "docs/**"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xliiv/fui"

[dependencies]
#clap = "2"
# this must be xliiv's fork until this gets merged
# https://github.com/clap-rs/clap/pull/1417
clap = { git = "https://github.com/xliiv/clap.git", branch = "get-version" }
# linux requires `sudo apt-get install xorg-dev`
clipboard = "0.4"
dirs = "1.0"
glob = "0.2"
regex = "0.2"
serde_json = "1.0"

[dependencies.cursive]
version = "0.9"
default-features = false

[features]
default = ["ncurses-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
